# empower-functions

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: contact.md  model-prompt.md
docs/inference/: built-in-cot.md  clarification.md  introduction.md  multi-turn.md  parallel-calling.md  sequential-calling.md  streaming.md
empower_functions/: README.md  __init__.py  chat_handler.py  prompt.py  server.py
empower_functions/monkey_patch/: app.py  types.py
examples/: llama_cpp_inference.py  openai_client.py  prompt.py
